components/nds-action-banner/scss/action-banner.scss
////
/// @group components
////

@use 'sass:math';
@use '@nice-digital/nds-core/scss/colours';
@use '@nice-digital/nds-core/scss/focus';
@use '@nice-digital/nds-core/scss/layout';
@use '@nice-digital/nds-core/scss/media-queries';
@use '@nice-digital/nds-core/scss/spacing';
@use '@nice-digital/nds-core/scss/typography';
@use '@nice-digital/nds-core/scss/utils';
@use '@nice-digital/nds-core/scss/visibility';

/// Action banner component. Used to highlight
/// and give context to a call-to-action.
/// Modifiers:
/// - subtle
///
/// @since 0.3.1
.action-banner {
  @include visibility.hide-print;
  @include typography.links-inverse;
  background: colours.$action-banner-default-background;
  border: 1px solid colours.$action-banner-default-border;
  color: colours.$text-inverse;
  margin: utils.rem(0 0 spacing.$large);
  padding: utils.rem(spacing.$medium 0);
  position: relative;

  &__container {
    @include layout.container;
  }

  &__text {
    margin-bottom: utils.rem(spacing.$medium);
  }

  &__title {
    @include typography.font-size(3);
    color: colours.$text-inverse;
    margin: utils.rem(0 0 spacing.$x-small);
  }

  &__intro {
    margin: 0;
  }

  &__actions {
    @include focus.inverse-button-focus;

    .btn {
      margin: 0;
    }
  }

  &__close {
    @include focus.inverse-button-focus;
    appearance: none;
    background: 0;
    border: 0;
    color: colours.$text-inverse;
    cursor: pointer;
    line-height: 1;
    padding: utils.rem(spacing.$small);
    position: absolute;
    right: 0;
    top: 0;
    z-index: 1;

    &:hover {
      background: rgb(0 0 0 / 20%);
    }

    &:focus {
      @include focus.inverse-focus-style;
    }
  }

  &--subtle {
    @include typography.links-default;
    background: colours.$action-banner-subtle-background;
    border: 1px solid colours.$action-banner-subtle-border;
    color: colours.$text;

    .action-banner__title {
      color: colours.$text;
    }

    .action-banner__close {
      color: colours.$text;
    }

    .action-banner__actions {
      @include focus.default-button-focus;
    }
  }

  &--closeable {
    .action-banner__title {
      padding-right: utils.rem(spacing.$large); // Make room for close button
    }
  }

  &--full-width {
    @include layout.fullWidth();
    @include typography.links-default;
    background: colours.$action-banner-full-width-background;
    border: 1px solid colours.$action-banner-full-width-border;
    color: colours.$text-inverse;
    padding: 0;

    .action-banner__intro * {
      @include typography.lead();
      margin-top: utils.rem(spacing.$medium);
      margin-bottom: utils.rem(spacing.$large);
    }

    .action-banner__container {
      padding-top: utils.rem(spacing.$x-large);
      padding-bottom: utils.rem(spacing.$x-large);
    }

    .action-banner__title {
      @include typography.h2();
      color: colours.$text-inverse;
      margin: 0;
    }

    .action-banner__actions {
      text-align: left;
      position: relative;
      top: 0;
      left: 0;
      transform: unset;
    }

    .action-banner__actions > .btn.btn--inverse {
      @include focus.default-button-focus;
    }

    &__image-container {
      aspect-ratio: 16 / 9;
      background-position: center center;
      display: block;
      min-height: 200px;
    }

    & a {
      &:link,
      &:visited,
      &:hover,
      &:active,
      &:focus {
        color: colours.$action-banner-full-width-dark-background-text-colour;
        outline-color: colours.$focus-inverse;
      }
    }
  }

  &--full-width-subtle {
    @extend .action-banner--full-width;

    background: colours.$action-banner-full-width-subtle-background;
    border: 1px solid colours.$action-banner-full-width-subtle-border;
    color: colours.$text;

    .action-banner__title {
      color: colours.$text;
    }

    .action-banner__actions {
      @include focus.default-button-focus;
    }

    & a {
      &:link,
      &:visited,
      &:hover,
      &:active,
      &:focus {
        color: colours.$action-banner-full-width-light-background-text-colour;
        outline-color: colours.$focus;
      }
    }
  }

  @include media-queries.mq($from: md) {
    @include layout.clearfix;

    &--full-width {
      &__image-container {
        aspect-ratio: unset;
        background-position: center center;
        background-size: cover;
        bottom: 0;
        display: none;
        min-height: unset;
        overflow: hidden;
        position: absolute;
        right: 0;
        top: 0;
        z-index: 0;

        @include media-queries.mq($from: md) {
          display: flex;
          width: 34%;
        }

        &::before {
          background: colours.$action-banner-full-width-background;
          content: '';
          flex: 0 0 200px;
          pointer-events: none;
          position: relative;
          transform: rotate(-15deg) scale(1.2) translateX(-60%);
          z-index: 1;
        }
      }
    }

    &__text {
      margin-bottom: 0;
      width: math.percentage(3 * 0.25);
    }

    &__actions {
      position: absolute;
      right: utils.rem(spacing.$medium);
      text-align: right;
      top: 50%;
      transform: translateY(-50%);
      width: math.percentage(1 * 0.25);
    }

    &--closeable {
      .action-banner__title {
        padding-right: 0;
      }

      .action-banner__actions {
        right: utils.rem(spacing.$x-large);
      }
    }
  }
}

